--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:layout_marginBottom="70dp"
         android:background="@drawable/ciculo_image"
         android:padding="10dp"
-        android:src="@drawable/ic_user_logo">
-    </ImageView>
+        android:src="@drawable/ic_user_logo"
+        app:srcCompat="@drawable/ic_user_logo"></ImageView>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
