--- a/app/src/main/res/drawable/btn_redondedo_naranja.xml
+++ b/app/src/main/res/drawable/btn_redondedo_naranja.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="#35b06e"></solid>
+        <solid android:color="#ff8000"></solid>
     <corners android:radius="50dp"></corners>
 </shape>
