--- a/app/src/main/res/layout/activity_registrate.xml
+++ b/app/src/main/res/layout/activity_registrate.xml
@@ -86,17 +86,17 @@
             android:inputType="textPassword"></EditText>
 
         <Button
+            android:id="@+id/crear_cuenta"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:id="@+id/crear_cuenta"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:background="@drawable/btn_fondo_color"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/btn_redondedo_naranja"
+            android:elevation="5dp"
             android:text="Crear Cuenta"
             android:textColor="#000"
-            android:textSize="16sp"
-            android:elevation="5dp"></Button>
+            android:textSize="16sp"></Button>
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
