--- a/app/src/main/res/layout/activity_detalle_producto.xml
+++ b/app/src/main/res/layout/activity_detalle_producto.xml
@@ -6,7 +6,254 @@
     android:layout_height="match_parent"
     tools:context=".DetalleProducto">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        android:scaleType="centerCrop">
+
+    </ImageView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginRight="0dp"
+            android:layout_marginLeft="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:background="#ff8000">
+
+
+            <Button
+                android:id="@+id/btn_iniciot"
+                android:layout_width="64dp"
+                android:layout_height="55dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/inicio"
+
+                android:textColor="#000"></Button>
+
+            <Button
+                android:id="@+id/btn_perfilt"
+                android:layout_width="60dp"
+                android:layout_height="54dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/perfil"
+                android:textColor="#000"></Button>
+
+            <Button
+                android:id="@+id/btn_buscart"
+                android:layout_width="58dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="18dp"
+                android:layout_marginBottom="4dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/buscar"
+                android:textColor="#000"></Button>
+
+            <Button
+                android:id="@+id/btn_carritot"
+                android:layout_width="66dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="4dp"
+                android:layout_margintTop="4dp"
+                android:background="@drawable/carrito"
+
+                android:textColor="#000"></Button>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginRight="0dp"
+            android:layout_marginLeft="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            >
+
+
+            <Button
+                android:id="@+id/btn_inicio"
+                android:layout_width="wrap_content"
+                android:layout_height="55dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginBottom="4dp"
+                android:text="OFERTAS"
+
+                android:textColor="#000"></Button>
+
+            <Button
+                android:id="@+id/btn_perfil"
+                android:layout_width="wrap_content"
+                android:layout_height="54dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginBottom="4dp"
+                android:text="CATEGORIAS"
+                android:textColor="#000"></Button>
+
+            <Button
+                android:id="@+id/btn_buscar"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:layout_marginRight="18dp"
+                android:layout_marginBottom="4dp"
+                android:text="POPULAR"
+                android:textColor="#000"></Button>
+        </LinearLayout>
+
+        <ViewFlipper
+            android:id="@+id/v_flipper"
+            android:layout_width="match_parent"
+            android:layout_height="200dp">
+
+        </ViewFlipper>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginRight="0dp"
+            android:layout_marginLeft="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            >
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/prod1"
+
+                    android:layout_width="169dp"
+                    android:layout_height="149dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@drawable/oreoprod">
+
+                </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="S/.10.00"
+                    android:textColor="#000"></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="OREO Chocolate x 10 unid"></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/prod2"
+                    android:layout_width="169dp"
+                    android:layout_height="149dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@drawable/picaras">
+
+                </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="S/.9.00"></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="Picaras Chocolate x 6 unid"></TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginRight="0dp"
+            android:layout_marginLeft="0dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/prod3"
+                    android:layout_width="169dp"
+                    android:layout_height="149dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@drawable/pionos">
+
+                </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="S/.9.00"></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="Alfajores Dulcezi x 24 unid"></TextView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/prod4"
+                    android:layout_width="169dp"
+                    android:layout_height="149dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginRight="18dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="@drawable/halls">
+
+                </Button>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="S/.8.00"></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:text="Halls Azul"></TextView>
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
